Fix choreday height to match extra space

--- a/assets/choreday.css
+++ b/assets/choreday.css
@@ -13,7 +13,7 @@
 
 #chores {
     /*width: 100%;*/
-    height: 440px;
+    height: 445px;
     overflow: hidden;
     margin-top: 1px;
 }
